rendered/envs/friclu/fritzgpt/ingress-oneshot-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/name: oneshot
  name: oneshot-nginx
  namespace: fritzgpt
spec:
  ingressClassName: nginx
  rules:
    - host: fritzgpt.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: oneshot-nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - fritzgpt.duchardt.net
      secretName: oneshot-certificate
